@@ -1,3 +1,9 @@
+2002-11-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* include/ddk/ldrtypes.h: Move ...
+	* include/ntos/ldrtypes.h: ... here.
+	* include/ddk/ntddk.h: Include ldrtypes.h at new location.
+
 2002-11-13  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* drivers/bus/acpi/ospm/osl.c (acpi_os_readable, acpi_os_writable):
